WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194054
Fix crashes when trying to ref the CallbackAggregator in NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=194054
Summary
Fix crashes when trying to ref the CallbackAggregator in NetworkProcess
Chris Dumez
Reported
2019-01-30 15:36:07 PST
Fix crashes when trying to ref the CallbackAggregator in NetworkProcess: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x000000010d3aeb10 WTFCrash + 16 (Assertions.cpp:255) 1 com.apple.JavaScriptCore 0x000000010d3aeb29 WTFCrashWithSecurityImplication + 9 2 com.apple.WebKit 0x0000000105a2a262 WTF::RefCountedBase::ref() const + 66 (RefCounted.h:43) Assertion failure: ASSERTION FAILED: !m_deletionHasBegun /Volumes/Data/slave/highsierra-debug/build/WebKitBuild/Debug/usr/local/include/wtf/RefCounted.h(43) : void WTF::RefCountedBase::ref() const 1 0x10d3aeb09 WTFCrash 2 0x10d3aeb29 WTFCrashWithSecurityImplication 3 0x105a2a262 WTF::RefCountedBase::ref() const 4 0x105d516e7 WTF::Ref<WebKit::NetworkProcess::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores(PAL::SessionID, WTF::OptionSet<WebKit::WebsiteDataType>, WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul>&&, bool, WTF::CompletionHandler<void (WTF::HashSet<WTF::String, WTF::StringHash, WTF::HashTraits<WTF::String> > const&)>&&)::CallbackAggregator, WTF::DumbPtrTraits<WebKit::NetworkProcess::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores(PAL::SessionID, WTF::OptionSet<WebKit::WebsiteDataType>, WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul>&&, bool, WTF::CompletionHandler<void (WTF::HashSet<WTF::String, WTF::StringHash, WTF::HashTraits<WTF::String> > const&)>&&)::CallbackAggregator> >::Ref(WebKit::NetworkProcess::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores(PAL::SessionID, WTF::OptionSet<WebKit::WebsiteDataType>, WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul>&&, bool, WTF::CompletionHandler<void (WTF::HashSet<WTF::String, WTF::StringHash, WTF::HashTraits<WTF::String> > const&)>&&)::CallbackAggregator&)
Attachments
Patch
(2.98 KB, patch)
2019-01-30 15:37 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-01-30 15:37:24 PST
Created
attachment 360634
[details]
Patch
Brent Fulgham
Comment 2
2019-01-30 15:42:47 PST
Comment on
attachment 360634
[details]
Patch Whoops! Thank you for fixing this.
WebKit Commit Bot
Comment 3
2019-01-30 16:57:02 PST
Comment on
attachment 360634
[details]
Patch Clearing flags on attachment: 360634 Committed
r240743
: <
https://trac.webkit.org/changeset/240743
>
WebKit Commit Bot
Comment 4
2019-01-30 16:57:03 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-01-30 16:58:29 PST
<
rdar://problem/47687539
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug