Fix crashes when trying to ref the CallbackAggregator in NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=194054

Reviewed by Brent Fulgham.

The callback aggregators should be ThreadSafeRefCounted since they are passed to other threads.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::fetchWebsiteData):
(WebKit::NetworkProcess::deleteWebsiteDataForTopPrivatelyControlledDomainsInAllPersistentDataStores):
(WebKit::NetworkProcess::topPrivatelyControlledDomainsWithWebsiteData):


Canonical link: https://commits.webkit.org/208531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240743 268f45cc-cd09-0410-ab3c-d52691b4dbfc